@@ -462,4 +462,7 @@ public:
    bool m_staticOnly;
 
    bool m_fStereo3DY;
+   bool m_fOverwriteBallImages;
+   Texture *m_ballImage;
+   Texture *m_decalImage;
 };
