@@ -282,28 +282,28 @@ BEGIN
     LTEXT           "Translator's web site address",IDC_TRANSWEBSITE,50,184,32,8,NOT WS_VISIBLE | WS_DISABLED
 END
 
-IDD_VIDEO_OPTIONS DIALOGEX 0, 0, 351, 306
+IDD_VIDEO_OPTIONS DIALOGEX 0, 0, 353, 359
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Video Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CONTROL         "Rotate for Cabinet Usage",IDC_BG_SET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,140,110,10
-    CONTROL         "Enable Fast FXAA",IDC_FFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,155,90,10
-    CONTROL         "Enable Quality FXAA",IDC_QFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,165,90,10
-    CONTROL         "Enable Extreme FXAA",IDC_EFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,175,90,10
-    CONTROL         "Enable 4xAntiAliasing",IDC_AA_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,189,126,10
-    CONTROL         "Stretch Ball with Table",IDC_StretchNo,"Button",BS_AUTORADIOBUTTON | WS_GROUP,16,213,83,10
-    CONTROL         "Don't stretch the Ball",IDC_StretchYes,"Button",BS_AUTORADIOBUTTON,16,224,81,10
+    CONTROL         "Rotate for Cabinet Usage",IDC_BG_SET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,185,110,10
+    CONTROL         "Enable Fast FXAA",IDC_FFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,200,90,10
+    CONTROL         "Enable Quality FXAA",IDC_QFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,210,90,10
+    CONTROL         "Enable Extreme FXAA",IDC_EFXAA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,220,90,10
+    CONTROL         "Enable 4xAntiAliasing",IDC_AA_ALL_TABLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,234,126,10
+    CONTROL         "Stretch Ball with Table",IDC_StretchNo,"Button",BS_AUTORADIOBUTTON | WS_GROUP,16,260,83,10
+    CONTROL         "Don't stretch the Ball",IDC_StretchYes,"Button",BS_AUTORADIOBUTTON,16,271,81,10
     CONTROL         "Cabinet anti-stretch the ball",IDC_StretchMonitor,
-                    "Button",BS_AUTORADIOBUTTON,16,235,111,10
-    GROUPBOX        "Aspect Ratio Offset",IDC_STATIC,25,247,110,25
-    LTEXT           "X",IDC_STATIC,31,259,8,8
-    EDITTEXT        IDC_CORRECTION_X,39,257,35,12,ES_AUTOHSCROLL
-    LTEXT           "Y",IDC_STATIC,85,258,8,8
-    EDITTEXT        IDC_CORRECTION_Y,93,257,35,12,ES_AUTOHSCROLL
+                    "Button",BS_AUTORADIOBUTTON,16,282,111,10
+    GROUPBOX        "Aspect Ratio Offset",IDC_STATIC,24,295,110,25
+    LTEXT           "X",IDC_STATIC,29,306,8,8
+    EDITTEXT        IDC_CORRECTION_X,39,304,35,12,ES_AUTOHSCROLL
+    LTEXT           "Y",IDC_STATIC,85,306,8,8
+    EDITTEXT        IDC_CORRECTION_Y,93,304,35,12,ES_AUTOHSCROLL
     CONTROL         "Reflect Ball on Playfield",IDC_GLOBAL_REFLECTION_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,18,91,10
-    CONTROL         "Ball Trails/Motion Blur",IDC_GLOBAL_TRAIL_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,31,91,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,18,91,10
+    CONTROL         "Ball Trails/Motion Blur",IDC_GLOBAL_TRAIL_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,29,91,10
     CONTROL         "Enable 3D Stereo",IDC_3D_STEREO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,18,70,10
     CONTROL         "Use Y-Axis for 3D (Cab)",IDC_3D_STEREO_Y,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,31,80,10
     LTEXT           "Offset",IDC_STATIC,266,47,50,10
@@ -312,42 +312,51 @@ BEGIN
     EDITTEXT        IDC_3D_STEREO_MS,304,58,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "ZPD",IDC_STATIC,266,73,50,10
     EDITTEXT        IDC_3D_STEREO_ZPD,304,71,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    GROUPBOX        "Ambient Occlusion",IDC_STATIC,154,49,103,38
-    CONTROL         "Enable",IDC_ENABLE_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,60,89,10
-    CONTROL         "Update in-game (quality)",IDC_DYNAMIC_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,73,90,10
-    LTEXT           "Visual Nudge Strength",IDC_STATIC,227,92,75,10
-    EDITTEXT        IDC_NUDGE_STRENGTH,304,90,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "Automatic Day->Night cycle",IDC_DYNAMIC_DN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,107,116,10
-    LTEXT           "Latitude",IDC_STATIC,172,121,33,10
-    EDITTEXT        IDC_DN_LATITUDE,223,119,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "Longitude",IDC_STATIC,266,121,35,10
-    EDITTEXT        IDC_DN_LONGITUDE,304,119,36,12,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "FPS limiter/VSync",IDC_STATIC,162,153,75,10
-    EDITTEXT        IDC_ADAPTIVE_VSYNC,239,151,20,12,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "Max prerendered frames",IDC_STATIC,162,166,77,8
-    EDITTEXT        IDC_MAX_PRE_FRAMES,239,164,20,12,ES_RIGHT | ES_AUTOHSCROLL
+    GROUPBOX        "Ambient Occlusion",IDC_STATIC,154,101,103,38
+    CONTROL         "Enable",IDC_ENABLE_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,112,89,10
+    CONTROL         "Update in-game (quality)",IDC_DYNAMIC_AO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,125,90,10
+    LTEXT           "Visual Nudge \nStrength",IDC_STATIC,261,123,44,19
+    EDITTEXT        IDC_NUDGE_STRENGTH,305,125,36,12,ES_RIGHT | ES_AUTOHSCROLL
+    CONTROL         "Enable",IDC_DYNAMIC_DN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,159,36,10
+    LTEXT           "Latitude",IDC_STATIC,172,173,33,10
+    EDITTEXT        IDC_DN_LATITUDE,223,171,36,12,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "Longitude",IDC_STATIC,266,173,35,10
+    EDITTEXT        IDC_DN_LONGITUDE,304,171,36,12,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "FPS limiter/VSync",IDC_STATIC,162,202,75,10
+    EDITTEXT        IDC_ADAPTIVE_VSYNC,239,200,20,12,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "Max prerendered frames",IDC_STATIC,162,215,77,8
+    EDITTEXT        IDC_MAX_PRE_FRAMES,239,213,20,12,ES_RIGHT | ES_AUTOHSCROLL
     CONTROL         "Texture compression (performance)",IDC_TEX_COMPRESS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,178,124,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,227,124,10
     CONTROL         "Force Anisotropic Texture Filtering (quality)",IDC_FORCE_ANISO,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,188,150,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,237,150,10
     CONTROL         "Alternative Depth Buffer processing",IDC_USE_NVIDIA_API_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,198,127,10
-    CONTROL         "Software vertex processing",IDC_SOFTWARE_VP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,208,104,10
-    CONTROL         "512",IDC_Tex512,"Button",BS_AUTORADIOBUTTON | WS_GROUP,290,232,28,10
-    CONTROL         "1024",IDC_Tex1024,"Button",BS_AUTORADIOBUTTON,252,232,32,10
-    CONTROL         "2048",IDC_Tex2048,"Button",BS_AUTORADIOBUTTON,214,232,32,10
-    CONTROL         "Unlimited",IDC_TexUnlimited,"Button",BS_AUTORADIOBUTTON,166,232,45,10
-    CONTROL         "",IDC_ARASlider,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,156,259,183,20
-    DEFPUSHBUTTON   "OK",IDOK,238,288,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,297,288,50,14
-    LISTBOX         IDC_SIZELIST,14,19,129,117,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Video Mode",IDC_STATIC,7,7,142,274
-    GROUPBOX        "Ball Rendering",IDC_STATIC,154,7,103,40
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,247,127,10
+    CONTROL         "Software vertex processing",IDC_SOFTWARE_VP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,257,104,10
+    CONTROL         "512",IDC_Tex512,"Button",BS_AUTORADIOBUTTON | WS_GROUP,290,281,28,10
+    CONTROL         "1024",IDC_Tex1024,"Button",BS_AUTORADIOBUTTON,252,281,32,10
+    CONTROL         "2048",IDC_Tex2048,"Button",BS_AUTORADIOBUTTON,214,281,32,10
+    CONTROL         "Unlimited",IDC_TexUnlimited,"Button",BS_AUTORADIOBUTTON,166,281,45,10
+    CONTROL         "",IDC_ARASlider,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,156,308,183,20
+    DEFPUSHBUTTON   "OK",IDOK,237,340,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,297,340,50,14
+    LISTBOX         IDC_SIZELIST,14,19,129,156,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Video Mode",IDC_STATIC,7,7,142,324
+    GROUPBOX        "Ball Rendering",IDC_STATIC,154,7,103,92
     GROUPBOX        "3D Stereo Output",IDC_STATIC,262,7,85,80
-    GROUPBOX        "Performance and Troubleshooting",IDC_STATIC,154,139,193,142
-    GROUPBOX        "Max Texture Dimension (for low-end gfx boards)",IDC_STATIC,159,221,180,25
-    LTEXT           "Object Detail Level (decrease = performance)",IDC_STATIC,162,250,156,8
-    GROUPBOX        "Ball aspect ratio for stretched Tables",IDC_STATIC,12,202,133,75
+    GROUPBOX        "Performance and Troubleshooting",IDC_STATIC,154,188,193,142
+    GROUPBOX        "Max Texture Dimension (for low-end gfx boards)",IDC_STATIC,159,270,180,25
+    LTEXT           "Object Detail Level (decrease = performance)",IDC_STATIC,162,299,156,8
+    GROUPBOX        "Ball aspect ratio for stretched Tables",IDC_STATIC,12,249,133,75
+    PUSHBUTTON      "...",IDC_BROWSE_BALL_IMAGE,236,60,17,12
+    EDITTEXT        IDC_BALL_IMAGE_EDIT,159,60,75,12,ES_AUTOHSCROLL
+    LTEXT           "Ball Image",IDC_STATIC,159,52,34,8
+    PUSHBUTTON      "...",IDC_BROWSE_BALL_DECAL,235,84,17,12
+    EDITTEXT        IDC_BALL_DECAL_EDIT,159,84,75,12,ES_AUTOHSCROLL
+    LTEXT           "Ball Decal",IDC_STATIC,159,76,33,8
+    CONTROL         "Overwrite Ball Image",IDC_OVERWRITE_BALL_IMAGE_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,40,81,10
+    GROUPBOX        "Automatic Day->Night cycle",IDC_STATIC,154,148,193,39
 END
 
 IDD_FONTDIALOG DIALOG 0, 0, 316, 167
@@ -2037,6 +2046,8 @@ BEGIN
 
     IDD_VIDEO_OPTIONS, DIALOG
     BEGIN
+        RIGHTMARGIN, 351
+        BOTTOMMARGIN, 354
     END
 
     IDD_FONTDIALOG, DIALOG
